Trying to fix dark mode switch on mobile | Commit 2

--- a/site/styles/base.scss
+++ b/site/styles/base.scss
@@ -74,6 +74,7 @@ body {
   height: 100%;
   box-sizing: border-box;
   touch-action: manipulation;
+  background: white !important;
   // font-family: var(--font-sans);
   // text-rendering: optimizeLegibility;
   // -webkit-font-smoothing: antialiased;
